fix: added required to editar_regla.html